# onnx-connx

./: .flake8  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  build_connx.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml  lint.yml
examples/: README.md  download.sh
examples/mobilenet/test_output.pb/: 0_100_1_1_192.data  0_101_1_4_192_1_3_3.data  0_102_1_1_192.data  0_103_1_1_192.data  0_104_1_1_192.data  0_105_1_1_192.data  0_106_1_4_64_192_1_1.data  0_107_1_1_64.data  0_108_1_1_64.data  0_109_1_1_64.data  0_10_1_1_32.data  0_110_1_1_64.data  0_111_1_4_384_64_1_1.data  0_112_1_1_384.data  0_113_1_1_384.data  0_114_1_1_384.data  0_115_1_1_384.data  0_116_1_4_384_1_3_3.data  0_117_1_1_384.data  0_118_1_1_384.data  0_119_1_1_384.data  0_11_1_4_32_1_3_3.data  0_120_1_1_384.data  0_121_1_4_64_384_1_1.data  0_122_1_1_64.data  0_123_1_1_64.data  0_124_1_1_64.data  0_125_1_1_64.data  0_126_1_4_384_64_1_1.data  0_127_1_1_384.data  0_128_1_1_384.data  0_129_1_1_384.data  0_12_1_1_32.data  0_130_1_1_384.data  0_131_1_4_384_1_3_3.data  0_132_1_1_384.data  0_133_1_1_384.data  0_134_1_1_384.data  0_135_1_1_384.data  0_136_1_4_64_384_1_1.data  (+225 more)
onnx_connx/: Backend.py  __init__.py  __main__.py  attr.py  backend.py  backend_rep.py  cli.py  compiler.py  config.py  normalizer.py  proto.py  test.py  test_connx_backend.py
onnx_connx/opset/: BatchNormalization.py  Cast.py  Conv.py  GlobalAveragePool.py  Iterator.py  MaxPool.py  Resize.py  __init__.py  opset.py  opset_18.py  opset_6.py  opset__0.py  opset__1.py  opset__10.py  opset__11.py  opset__12.py  opset__13.py  opset__14.py  opset__15.py  opset__16.py  opset__6.py  opset__7.py  opset__9.py  opset_v18.py  util.py
src/onnx_connx/: backend.py  backend_rep.py  compiler.py  proto.py  test_connx_backend.py
src/onnx_connx/opset/: BatchNormalization.py  Cast.py  Conv.py  MaxPool.py  Resize.py  opset.py  util.py
tests/: test_models.py
