[tool.poetry]
name = "onnx-connx"
version = "2.3.0"
description = "ONNX to CONNX converting tool"
authors = ["Semih Kim <semih.kim@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/semihlab/onnx-connx"
repository = "https://github.com/semihlab/onnx-connx"
classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Topic :: Software Development :: Build Tools",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/semihlab/onnx-connx/issues"

[tool.poetry.dependencies]
python = "^3.8"
onnx = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
tabulate = "^0.8.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
onnx2connx = 'onnx_connx.compiler:compile'
connx-run = 'onnx_connx.backend:run'
