[tool.poetry]
name = "onnx-connx"
version = "2.3.0"
description = "ONNX to CONNX converting tool"
authors = ["Semih Kim <semih.kim@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/semihlab/onnx-connx"
repository = "https://github.com/semihlab/onnx-connx"
classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Topic :: Software Development :: Build Tools",
]
include = [
  "onnx_connx/connx",
  "connx"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/semihlab/onnx-connx/issues"

[tool.poetry.dependencies]
python = "^3.8"
onnx = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
tabulate = "^0.8.9"
Jinja2 = "^3.0.3"

[build-system]
requires = [
  "poetry-core>=1.0.0",
  "cmake>=3.22.2",
  "ninja>=1.10.2.3",
  "jinja2>=3.0.3"
]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
onnx2connx = 'onnx_connx.compiler:compile'
connx-run = 'onnx_connx.backend:run'

[tool.poetry.build]
generate-setup-file = false
script = "build_connx.py"
